@@ -57,3 +57,20 @@ body {
     text-align: left;
   }
 }
+
+.copyright {
+  text-align: center;
+}
+
+#submit {
+  display: block;
+  margin : 0 auto;
+}
+
+form p {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  left-margin: 50%;
+  text-align: center;
+}
