@@ -9,3 +9,4 @@
 - Created base Course Page Template(@Chino96)
 - Added read in file logic to courses/forms.py (@kh06089)
 - Added navigation bar to the home page (@cm09516)
+- Added navigation bar to the course page (@kh06089)
